# boglehead

./: pyproject.toml
.github/workflows/: lint-python.yml  python-tests.yml
src/boglehead/: __init__.py  cli.py  vanguard.py
tests/boglehead/: conftest.py  test_cli.py  test_vanguard.py
